fix bag spec + projects + fix adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -210,14 +210,14 @@
                 </li>
               </ul>
               <div class="menu__mobil-box">
-          
-                  <a class="global__btn-contact global-btn menu__mobil-btn" href="#">
-                    +7 921 094 12 55
-                  </a>
-                  <a class="global-btn global__btn-mail menu__mobil-btn" href="#">
-                    INFO@LINWA.RU
-                  </a>
-        
+
+                <a class="global__btn-contact global-btn menu__mobil-btn" href="#">
+                  +7 921 094 12 55
+                </a>
+                <a class="global-btn global__btn-mail menu__mobil-btn" href="#">
+                  INFO@LINWA.RU
+                </a>
+
                 <ul class="global__social ">
                   <li class="global__social-list menu__mobil-social--list">
                     <a href="#" class="global__social-list--link global-btn">
@@ -448,8 +448,10 @@
                   ПРОЕКТИРОВАНИЕ
                   <br>
                   БАССЕЙНОВ
-                  <span>Подробнее...</span>
                 </h3>
+                <div class="spec__item-more text">
+                  Подробнее...
+                </div>
               </div>
             </a>
             <a class="spec__item" href="#" style="background-image: url('images/content/spec__img2.jpg');">
@@ -458,8 +460,10 @@
                   СТРОИТЕЛЬСТВО
                   <br>
                   БАССЕЙНОВ
-                  <span>Подробнее...</span>
                 </h3>
+                <div class="spec__item-more text">
+                  Подробнее...
+                </div>
               </div>
             </a>
           </div>
@@ -470,8 +474,10 @@
                   РЕКОНСТРУКЦИЯ
                   <br>
                   И РЕМОНТ БАССЕЙНОВ
-                  <span>Подробнее...</span>
                 </h3>
+                <div class="spec__item-more text">
+                  Подробнее...
+                </div>
               </div>
             </a>
             <a class="spec__item" href="#" style="background-image: url('images/content/spec__img4.jpg');">
@@ -480,8 +486,10 @@
                   ОБСЛУЖИВАНИЕ
                   <br>
                   БАССЕЙНОВ
-                  <span>Подробнее...</span>
                 </h3>
+                <div class="spec__item-more text">
+                  Подробнее...
+                </div>
               </div>
             </a>
           </div>
@@ -597,7 +605,7 @@
                   встроена в открытую террасу возле дома. Откидывающаяся Лестница позволяет закрывать купель легкой
                   пластиковой крышкой что позволяет воде оставаться всегда кристально чистой.
                 </p>
-                <p class="projects__more">
+                <p class="projects__more text">
                   Подробнее...
                 </p>
               </div>
@@ -607,12 +615,14 @@
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   МОЗАИЧНЫЙ БАССЕЙН С ДЖАКУЗИ
-                  <span class="projects__item-more">Подробнее...</span>
                 </h3>
                 <p class="projects__text-more text">
                   Бассейн отделан белоснежной мозаикой и имеет «римский» вход, Конструкция чаши отлита по разработанному
                   проекту одновременно с бетонированием фундамента здания, Оборудование бассейна вместе с переливной
                   емкостью расположено в техническом этаже дома.
+                </p>
+                <p class="projects__more text">
+                  Подробнее...
                 </p>
               </div>
             </a>
@@ -625,11 +635,13 @@
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   БАССЕЙН В ЗАГОРОДНОМ ДОМЕ
-                  <span class="projects__item-more">Подробнее...</span>
                 </h3>
                 <p class="projects__text-more text">
                   Бассейн отделан пленкой ПВХ «под мозаику». Противоток с расходом в 120 м³ позволяет проводить
                   тренировки по плаванию в ограниченном пространстве бассейна.
+                </p>
+                <p class="projects__more text">
+                  Подробнее...
                 </p>
               </div>
             </a>
@@ -637,11 +649,13 @@
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   Банный комплекс с бассейном в коттедже
-                  <span class="projects__item-more">Подробнее...</span>
                 </h3>
                 <p class="projects__text-more text">
                   Бассейн имеет переменную глубину. Бетонная чаша бассейна отделана пленкой ПВХ, вокруг построена
                   деревянная терраса. Оборудование расположено в техническом помещении выше уровня воды.
+                </p>
+                <p class="projects__more text">
+                  Подробнее...
                 </p>
               </div>
             </a>
