completed text-more section spec and section projects

--- a/app/index.html
+++ b/app/index.html
@@ -585,6 +585,7 @@
       <section class="projects section">
         <h2 class="projects__title title">
           галерея работ
+
         </h2>
         <p class="projects__text subtitle text">
           В галерее наших работ Вы можете ознакомиться с проектами, реализованными нашей компанией, каждым из которых мы
@@ -598,15 +599,15 @@
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   КУПЕЛЬ НА ДАЧЕ
+                  <p class="projects__more text">
+                    Подробнее...
+                  </p>
                 </h3>
 
-                <p class="projects__text-more projects-block text">
+                <p class="projects__text-more text">
                   Уличная купель предназначенная для круглогодичного использования. Железобетонная конструкция чаши
                   встроена в открытую террасу возле дома. Откидывающаяся Лестница позволяет закрывать купель легкой
                   пластиковой крышкой что позволяет воде оставаться всегда кристально чистой.
-                </p>
-                <p class="projects__more text">
-                  Подробнее...
                 </p>
               </div>
             </a>
@@ -615,14 +616,14 @@
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   МОЗАИЧНЫЙ БАССЕЙН С ДЖАКУЗИ
+                  <p class="projects__more text">
+                    Подробнее...
+                  </p>
                 </h3>
                 <p class="projects__text-more text">
                   Бассейн отделан белоснежной мозаикой и имеет «римский» вход, Конструкция чаши отлита по разработанному
                   проекту одновременно с бетонированием фундамента здания, Оборудование бассейна вместе с переливной
                   емкостью расположено в техническом этаже дома.
-                </p>
-                <p class="projects__more text">
-                  Подробнее...
                 </p>
               </div>
             </a>
@@ -635,27 +636,29 @@
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   БАССЕЙН В ЗАГОРОДНОМ ДОМЕ
+                  <p class="projects__more text">
+                    Подробнее...
+                  </p>
                 </h3>
+
                 <p class="projects__text-more text">
                   Бассейн отделан пленкой ПВХ «под мозаику». Противоток с расходом в 120 м³ позволяет проводить
                   тренировки по плаванию в ограниченном пространстве бассейна.
                 </p>
-                <p class="projects__more text">
-                  Подробнее...
-                </p>
+
               </div>
             </a>
             <a class="projects__item" href="#" style="background-image: url('images/content/projects__img4.jpg');">
               <div class="global-bg">
                 <h3 class="projects__item-title">
                   Банный комплекс с бассейном в коттедже
+                  <p class="projects__more text">
+                    Подробнее...
+                  </p>
                 </h3>
                 <p class="projects__text-more text">
                   Бассейн имеет переменную глубину. Бетонная чаша бассейна отделана пленкой ПВХ, вокруг построена
                   деревянная терраса. Оборудование расположено в техническом помещении выше уровня воды.
-                </p>
-                <p class="projects__more text">
-                  Подробнее...
                 </p>
               </div>
             </a>
@@ -688,8 +691,8 @@
 
 
 
-            <details class="questions__item global__item-bg" open>
-              <summary class="questions__item-title">
+            <div class="questions__item global__item-bg" open>
+              <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Какой бассейн выбрать?
                 </p>
@@ -697,7 +700,7 @@
                   <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
                   <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
                 </div>
-              </summary>
+              </div>
 
               <p class="questions__item-text text">
                 Для того чтобы понять, какой бассейн подойдёт именно вам - предлагаем ознакомиться с различными типами
@@ -714,10 +717,10 @@
                 <a class="questions__item-link" href="#">оставить заявку на
                   бесплатную консультацию</a>
               </p>
-            </details>
+            </div>
 
-            <details class="questions__item global__item-bg">
-              <summary class="questions__item-title">
+            <div class="questions__item global__item-bg">
+              <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Какие гарантии вы даёте на вашу работу?
                 </p>
@@ -725,17 +728,17 @@
                   <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
                   <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
                 </div>
-              </summary>
+              </div>
               <p class="questions__item-text text">
                 Мы даем гарантию на всю нашу работу 2 года,
                 <br>
                 <br>
                 +1 год при заключении сервисного договора.
               </p>
-            </details>
+            </div>
 
-            <details class="questions__item global__item-bg">
-              <summary class="questions__item-title">
+            <div class="questions__item global__item-bg">
+              <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Какие данные нужны для предварительного расчета бассейна?
                 </p>
@@ -743,7 +746,7 @@
                   <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
                   <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
                 </div>
-              </summary>
+              </div>
               <p class="questions__item-text text">
                 Что бы сделать предварительный расчет нам потребуется:
                 <br>
@@ -752,10 +755,10 @@
                 предварительной консультации
 
               </p>
-            </details>
+            </div>
 
-            <details class="questions__item global__item-bg">
-              <summary class="questions__item-title">
+            <div class="questions__item global__item-bg">
+              <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Чем вы оборудуете бассейн?
                 </p>
@@ -763,17 +766,17 @@
                   <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
                   <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
                 </div>
-              </summary>
+              </div>
               <p class="questions__item-text text">
                 Мы не являемся производителем и продавцами оборудования.
                 <br>
                 То есть не ограничиваемся «собственным»
                 ассортиментом и подберем для вас наилучший и оптимальный вариант
               </p>
-            </details>
+            </div>
 
-            <details class="questions__item global__item-bg">
-              <summary class="questions__item-title">
+            <div class="questions__item global__item-bg">
+              <div class="questions__item-title">
                 <p class="questions__item-title--text">
                   Нужен бассейн «под ключ»
                 </p>
@@ -781,12 +784,12 @@
                   <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
                   <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
                 </div>
-              </summary>
+              </div>
               <p class="questions__item-text text">
                 Реализуем проект полного цикла — начиная от идеи и копки котлована, до проведения пусконаладочных работ
                 и сдачи Заказчику.
               </p>
-            </details>
+            </div>
           </div>
 
         </div>
@@ -843,33 +846,33 @@
 
 
             <div class="reviews__slider">
-              <div class="reviews__item global__item-bg"
-                style="background-image: url('images/content/reviews__slider-bg1.jpg');">
+              <div class="reviews__item global__item-bg" style="background-image: url('images/content/header-bg.jpg');">
                 <div class="reviews__item-wrapper">
                   <div class="reviews__info">
                     <div class="reviews__info-title">
                       <img class="reviews__info-img" src="images/icons/man.png" alt="">
                       <div class="reviews__info-name">
-                        АНДРЕЙ НЕКРАСОВ2
+                        Владимир Нестеров
                         <div class="reviews__info-name--time">
-                          год назад2
+                          2 год назад
                         </div>
                       </div>
                     </div>
                     <div class="reviews__info__wrapper">
                       <p class="reviews__info-text text">
-                        2Очень хорошая компания! Супер профессиональный подход, очень лояльны к клиенту. При общем
-                        высоком
-                        бюджете, смогли найти супер оптимальное решение, которое нас полностью устроило. Сроки все
-                        выдержаны
-                        полностью. Рекомендую!2
+                        ооочень хорошая компания. Очень очень.
+                        ооочень хорошая компания. Очень очень.
+                        ооочень хорошая компания. Очень очень.
+                        ооочень хорошая компания. Очень очень.
+                        ооочень хорошая компания. Очень очень.
+                        ооочень хорошая компания. Очень очень.
                       </p>
                       <a class="reviews__info-link text" href=#>
                         Больше отзывов на Яндекс...
                       </a>
                     </div>
                   </div>
-                  <div class="reviews__img" style="background-image: url('images/content/reviews__slider-img1.jpg');">
+                  <div class="reviews__img" style="background-image: url('images/content/header-bg.jpg');">
                   </div>
                 </div>
               </div>
