fix bg questions + add new footer + adaptive + adaprtive fix social header and footer in 500px

--- a/app/index.html
+++ b/app/index.html
@@ -675,12 +675,6 @@
       </section>
 
 
-      <section class="questions section" style=" background-image: url('images/content/questions-bg.png');">
-        <h2 class="questions__title title">
-          ЧАСТО ЗАДАВАЕМЫЕ ВОПРОСЫ
-        </h2>
-        <div class="questions__inner">
-          <div class="container">
 
 
 
@@ -691,117 +685,146 @@
 
 
 
-            <div class="questions__item global__item-bg" open>
-              <div class="questions__item-title">
-                <p class="questions__item-title--text">
-                  Какой бассейн выбрать?
-                </p>
-                <div class="questions__item-wrapper">
-                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+
+
+
+      <section class="questions section">
+        <div class="rrr" style=" background-image: url('images/content/questions-bg.png');">
+          <div class="wwww">
+            <h2 class="questions__title title">
+              ЧАСТО ЗАДАВАЕМЫЕ ВОПРОСЫ
+            </h2>
+            <div class="questions__inner">
+              <div class="container">
+
+                <div class="questions__item global__item-bg questions__item--active" id="questions__title-one">
+                  <div class="questions__item-title">
+                    <p class="questions__item-title--text">
+                      Какой бассейн выбрать?
+                    </p>
+                    <div class="questions__item-wrapper">
+                      <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                      <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                    </div>
+                  </div>
+
+                  <p class="questions__item-text text">
+                    Для того чтобы понять, какой бассейн подойдёт именно вам - предлагаем ознакомиться с различными
+                    типами
+                    чаш
+                    на страницах нашего сайта:
+                    <a class="questions__item-link" href="#">полипропиленовый</a>,
+                    <a class="questions__item-link" href="#">композитный</a>,
+                    <a class="questions__item-link" href="#">бетонный</a>,
+                    или
+                    <a class="questions__item-link" href="#">секционный</a>,
+                    <br>
+                    <br>
+                    или
+                    <a class="questions__item-link" href="#">оставить заявку на
+                      бесплатную консультацию</a>
+                  </p>
+                </div>
+
+                <div class="questions__item global__item-bg">
+                  <div class="questions__item-title">
+                    <p class="questions__item-title--text">
+                      Какие гарантии вы даёте на вашу работу?
+                    </p>
+                    <div class="questions__item-wrapper">
+                      <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                      <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                    </div>
+                  </div>
+                  <p class="questions__item-text text">
+                    Мы даем гарантию на всю нашу работу 2 года,
+                    <br>
+                    <br>
+                    +1 год при заключении сервисного договора.
+                  </p>
+                </div>
+
+                <div class="questions__item global__item-bg">
+                  <div class="questions__item-title">
+                    <p class="questions__item-title--text">
+                      Какие данные нужны для предварительного расчета бассейна?
+                    </p>
+                    <div class="questions__item-wrapper">
+                      <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                      <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                    </div>
+                  </div>
+                  <p class="questions__item-text text">
+                    Что бы сделать предварительный расчет нам потребуется:
+                    <br>
+                    <br>
+                    Для Вашего удобства мы можем бесплатно приехать на ваш объект, провести замеры оказать услуги по
+                    предварительной консультации
+
+                  </p>
+                </div>
+
+                <div class="questions__item global__item-bg">
+                  <div class="questions__item-title">
+                    <p class="questions__item-title--text">
+                      Чем вы оборудуете бассейн?
+                    </p>
+                    <div class="questions__item-wrapper">
+                      <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                      <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                    </div>
+                  </div>
+                  <p class="questions__item-text text">
+                    Мы не являемся производителем и продавцами оборудования.
+                    <br>
+                    То есть не ограничиваемся «собственным»
+                    ассортиментом и подберем для вас наилучший и оптимальный вариант
+                  </p>
+                </div>
+
+                <div class="questions__item global__item-bg">
+                  <div class="questions__item-title">
+                    <p class="questions__item-title--text">
+                      Нужен бассейн «под ключ»
+                    </p>
+                    <div class="questions__item-wrapper">
+                      <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                      <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                    </div>
+                  </div>
+                  <p class="questions__item-text text">
+                    Реализуем проект полного цикла — начиная от идеи и копки котлована, до проведения пусконаладочных
+                    работ
+                    и сдачи Заказчику.
+                  </p>
                 </div>
               </div>
 
-              <p class="questions__item-text text">
-                Для того чтобы понять, какой бассейн подойдёт именно вам - предлагаем ознакомиться с различными типами
-                чаш
-                на страницах нашего сайта:
-                <a class="questions__item-link" href="#">полипропиленовый</a>,
-                <a class="questions__item-link" href="#">композитный</a>,
-                <a class="questions__item-link" href="#">бетонный</a>,
-                или
-                <a class="questions__item-link" href="#">секционный</a>,
-                <br>
-                <br>
-                или
-                <a class="questions__item-link" href="#">оставить заявку на
-                  бесплатную консультацию</a>
-              </p>
             </div>
 
-            <div class="questions__item global__item-bg">
-              <div class="questions__item-title">
-                <p class="questions__item-title--text">
-                  Какие гарантии вы даёте на вашу работу?
-                </p>
-                <div class="questions__item-wrapper">
-                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
-                </div>
-              </div>
-              <p class="questions__item-text text">
-                Мы даем гарантию на всю нашу работу 2 года,
-                <br>
-                <br>
-                +1 год при заключении сервисного договора.
-              </p>
-            </div>
-
-            <div class="questions__item global__item-bg">
-              <div class="questions__item-title">
-                <p class="questions__item-title--text">
-                  Какие данные нужны для предварительного расчета бассейна?
-                </p>
-                <div class="questions__item-wrapper">
-                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
-                </div>
-              </div>
-              <p class="questions__item-text text">
-                Что бы сделать предварительный расчет нам потребуется:
-                <br>
-                <br>
-                Для Вашего удобства мы можем бесплатно приехать на ваш объект, провести замеры оказать услуги по
-                предварительной консультации
-
-              </p>
-            </div>
-
-            <div class="questions__item global__item-bg">
-              <div class="questions__item-title">
-                <p class="questions__item-title--text">
-                  Чем вы оборудуете бассейн?
-                </p>
-                <div class="questions__item-wrapper">
-                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
-                </div>
-              </div>
-              <p class="questions__item-text text">
-                Мы не являемся производителем и продавцами оборудования.
-                <br>
-                То есть не ограничиваемся «собственным»
-                ассортиментом и подберем для вас наилучший и оптимальный вариант
-              </p>
-            </div>
-
-            <div class="questions__item global__item-bg">
-              <div class="questions__item-title">
-                <p class="questions__item-title--text">
-                  Нужен бассейн «под ключ»
-                </p>
-                <div class="questions__item-wrapper">
-                  <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                  <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
-                </div>
-              </div>
-              <p class="questions__item-text text">
-                Реализуем проект полного цикла — начиная от идеи и копки котлована, до проведения пусконаладочных работ
-                и сдачи Заказчику.
-              </p>
+            <div class="global__inner-btn">
+              <a class="global__btn-contact main-btn global-btn" href="#">
+                ОСТАЛИСЬ ВОПРОСЫ?
+              </a>
             </div>
           </div>
-
         </div>
-
-        <div class="global__inner-btn">
-          <a class="global__btn-contact main-btn global-btn" href="#">
-            ОСТАЛИСЬ ВОПРОСЫ?
-          </a>
-        </div>
-
-
       </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
       <section class="reviews section">
@@ -1038,11 +1061,34 @@
             </ul>
           </div>
 
+          <div class="footer__item footer__item-requisites">
 
+
+            <p class="footer__requisites">
+              РЕКВИЗИТЫ
+              <br>
+              ООО “ЛИНИЯ ВОДЫ”
+              <br>
+              <br>
+              ИНН 3810326662
+              <br>
+              БИК 045004774
+              <br>
+              ОГРН: 1123850035650
+            </p>
+            <p class="footer__city">
+              г. Санкт-Петербург,
+              <br>
+              ул.Белы Куна, д.30, литер А, оф.520
+            </p>
+            <a class="footer__requisites-text" href="#">
+              Политика конфиденциальности
+            </a>
+          </div>
 
           <div class="footer__item footer__item-contacts">
             <div class="footer__social__wrapper">
-              <ul class="global__social ">
+              <ul class="global__social footer__social ">
                 <li class="global__social-list">
                   <a href="#" class="global__social-list--link global-btn">
                     <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1178,26 +1224,6 @@
                 INFO@LINWA.RU
               </a>
             </div>
-            <p class="footer__city text">
-              г. Санкт-Петербург,
-              <br>
-              ул.Белы Куна, д.30, литер А, оф.520
-            </p>
-
-            <p class="footer__requisites text">
-              РЕКВИЗИТЫ
-              <br>
-              ООО “ЛИНИЯ ВОДЫ”
-              <br>
-              <br>
-              ИНН 3810326662
-              <br>
-              БИК 045004774
-              <br>
-              ОГРН: 1123850035650
-            </p>
-
-
 
           </div>
 
@@ -1206,20 +1232,17 @@
         </div>
         <div class="footer__down">
           <p class="footer__down-copyright">
-            © 2001—2020
+            Компания «Линия Воды»
             <br>
-            Компания «Линия Воды».
+            2001—2022
             <br>
             <br>
-            Все права защищены.
+            © Все права защищены
             <br>
-            Копирование, в том числе частичное, запрещено.
+            Копирование, в том числе частичное, запрещено
+
+             <a class="lapli" href="#">РАЗРАБОТКА САЙТА студия LAPKI-WEB.RU</a>
           </p>
-          <div class="footer__down-policy">
-            <a class="footer__down-text" href="#">
-              Политика конфиденциальности
-            </a>
-          </div>
         </div>
       </div>
 
