--- a/app/index.html
+++ b/app/index.html
@@ -688,9 +688,8 @@
 
 
 
-      <section class="questions section">
-        <div class="rrr" style=" background-image: url('images/content/questions-bg.png');">
-          <div class="wwww">
+      <section class="questions section" style=" background-image: url('images/content/questions-bg.png');">
+
             <h2 class="questions__title title">
               ЧАСТО ЗАДАВАЕМЫЕ ВОПРОСЫ
             </h2>
@@ -807,8 +806,7 @@
                 ОСТАЛИСЬ ВОПРОСЫ?
               </a>
             </div>
-          </div>
-        </div>
+
       </section>
 
 
@@ -888,7 +886,7 @@
                         ооочень хорошая компания. Очень очень.
                         ооочень хорошая компания. Очень очень.
                         ооочень хорошая компания. Очень очень.
-                        ооочень хорошая компания. Очень очень.
+                        ооочень хорошая компания. 
                       </p>
                       <a class="reviews__info-link text" href=#>
                         Больше отзывов на Яндекс...
@@ -916,6 +914,7 @@
           </button>
         </div>
       </section>
+
 
       <section class="feedback section" style="background-image: url('images/content/feedback-bg.png');">
         <div class="container">
@@ -1065,9 +1064,9 @@
 
 
             <p class="footer__requisites">
-              РЕКВИЗИТЫ
+              Реквизиты
               <br>
-              ООО “ЛИНИЯ ВОДЫ”
+              ООО “Линия воды”
               <br>
               <br>
               ИНН 3810326662
@@ -1241,7 +1240,7 @@
             <br>
             Копирование, в том числе частичное, запрещено
 
-             <a class="lapli" href="#">РАЗРАБОТКА САЙТА студия LAPKI-WEB.RU</a>
+             <a class="lapli" href="#">Разработка сайта студия lapki-web.ru</a>
           </p>
         </div>
       </div>
