fix btn in section feedback, fix link in section footer

--- a/app/index.html
+++ b/app/index.html
@@ -944,13 +944,13 @@
                 </div>
               </div>
             </div>
-            <div class="feedback__inners-btn global__inner-btn">
-              <div class="feedback__file__wrapper">
+            <div class="global__inner-btn">
+              <!-- <div class="feedback__file__wrapper">
                 <input class="feedback__file" type="file" name="file" id="input__file">
                 <label for="input__file" class="input__file-button main-btn global__btn-contact global-btn">
                   <span class="input__file-button-text">ПРИКРЕПИТЬ ФАЙЛЫ</span>
                 </label>
-              </div>
+              </div> -->
               <button class="feedback__btn main-btn global__btn-contact global-btn">
                 Отправить
               </button>
@@ -1028,17 +1028,17 @@
                 </li>
                 <li class="footer__menu-mobil__list">
                   <a class="footer__menu-mobil__list--link" href="#">
-                    КОМПОЗИТНЫЕ БАССЕЙНЫ
+                    Мозаичные бассейны
                   </a>
                 </li>
                 <li class="footer__menu-mobil__list">
                   <a class="footer__menu-mobil__list--link" href="#">
-                    ПОЛИПРОПИЛЕНОВЫЕ БАССЕЙНЫ
+                    Плёночные бассейны
                   </a>
                 </li>
                 <li class="footer__menu-mobil__list">
                   <a class="footer__menu-mobil__list--link" href="#">
-                    СЕКЦИОННЫЕ БАССЕЙНЫ
+                    детские БАССЕЙНЫ
                   </a>
                 </li>
               </ul>
